# WAT-evaluator

./: LICENSE  README.rst  evaluate.py  pyproject.toml
procedures/: en.mk  ja.mk
wat_evaluator/procedures/: ja.mk
